--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,16 +14,13 @@ on:
         - Production
         required: true
         type: choice
-      artifactName:
-        required: false
-        type: string
-      artifactRun:
+      version:
         required: false
         type: string
 
 jobs:
   build:
-    if: ${{ github.event.inputs.artifactRun == '' }}
+    if: ${{ github.event.inputs.version == '' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -33,15 +30,13 @@ jobs:
     - name: Setup ruby
       uses: ruby/setup-ruby@v1
 
-    - name: Create artifact
+    - name: Create release
+      id: release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        _internals/shell-functions/create-artifact.sh
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: site
-        path: _artifact/site.zip
+        npx semantic-release
+        echo "::set-output name=version::$VERSION"
 
   preview:
     needs: [build]
@@ -52,8 +47,7 @@ jobs:
       github.event.inputs.environment == 'Preview'
     uses: ./.github/workflows/cdk-deploy.yml
     with:
-      artifactName: ${{ github.event.inputs.artifactName || 'site' }}
-      artifactRun: ${{ github.event.inputs.artifactRun }}
+      version: ${{ github.event.inputs.environment || steps.release.outputs.version }}
       awsRegion: us-east-2
       environment: Preview
       context: >
@@ -63,7 +57,6 @@ jobs:
       awsAccountId: ${{ secrets.AWS_ACCOUNT_ID }}
       awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
       awsSecretAccessKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      githubToken: ${{ secrets.GITHUB_TOKEN }}
 
   production:
     needs: [build, preview]
@@ -74,8 +67,7 @@ jobs:
       github.event.inputs.environment == 'Production'
     uses: ./.github/workflows/cdk-deploy.yml
     with:
-      artifactName: ${{ github.event.inputs.artifactName || 'site' }}
-      artifactRun: ${{ github.event.inputs.artifactRun }}
+      version: ${{ github.event.inputs.environment || steps.release.outputs.version }}
       awsRegion: us-east-2
       environment: Production
       context: >
@@ -85,4 +77,3 @@ jobs:
       awsAccountId: ${{ secrets.AWS_ACCOUNT_ID }}
       awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
       awsSecretAccessKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      githubToken: ${{ secrets.GITHUB_TOKEN }}
