--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,17 +5,9 @@
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
-    ["@semantic-release/exec", {
-      "prepareCmd": "./_internals/shell-functions/create-artifact.sh",
-      "successCommand": "echo ${lastRelease.version}"
-    }],
-    ["@semantic-release/npm", {
-      "npmPublish": false,
-      "tarballDir": "_site"
-    }],
     ["@semantic-release/github", {
       "assets": [
-        { "path": "_site/*.tgz", "label": "Site contents" }
+        { "path": "_artifact/site.zip", "label": "Site contents" }
       ]
     }]
   ]
