fix: stop deploying when nothing is released

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         npx semantic-release
-        VERSION=$(git describe --tags) || return 0
+        VERSION=$(git tag --points-at) || return 0
         echo "::set-output name=version::$VERSION"
 
   preview:
