remove some steps and update build condition

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,8 @@ jobs:
     needs: [setup]
     if: >-
       !failure() &&
-      !github.event.inputs.version &&
-      !needs.setup.outputs.version
+      github.event.inputs.version == '' &&
+      needs.setup.outputs.version == ''
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.release.outputs.version }}
@@ -44,13 +44,6 @@ jobs:
 
     - name: Setup ruby
       uses: ruby/setup-ruby@v1
-
-    - name: Setup asdf
-      uses: asdf-vm/actions/setup@v1
-
-    - name: Install nodejs
-      run: |
-        asdf plugin add nodejs && asdf install nodejs
 
     - name: Create artifact
       run: |
