--- a/.github/workflows/cdk-deploy.yml
+++ b/.github/workflows/cdk-deploy.yml
@@ -46,11 +46,9 @@ jobs:
         asdf plugin add jq && asdf install jq
 
     - name: Download artifact
-      env:
-        GITHUB_REPO_URL: https://github.com/${{ github.repository }}
       run: |
-        curl "$GITHUB_REPO_URL/releases/download/${{ inputs.version }}/site.zip" \
-          -o "_artifact/site.zip" -L --create-dirs
+        _internals/shell-functions/download-release.sh \
+          '${{ github.repository }}' '${{ inputs.version }}'
 
     - name: Read CDK context
       id: cdk_context
