fix: update URL in config

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Kevin Allen
 email: kevjallen16@gmail.com
 description: >- 
   Engineer and consultant from Cleveland, Ohio
-url: www.kevjallen.com
+url: site.kevjallen.com
 twitter_username: kevjallen
 github_username: kevjallen
 
