--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Release
 
 on:
+  pull_request:
+
   push:
     branches: [ master ]
     
@@ -13,7 +15,8 @@ on:
 jobs:
   setup:
     if: >-
-      !github.event.inputs.version
+      !github.event.inputs.version &&
+      !github.event.pull_request
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version_lookup.outputs.version }}
@@ -77,7 +80,7 @@ jobs:
           needs.setup.outputs.version ||
           needs.build.outputs.version
         }}
-      awsRegion: us-east-2
+      awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}
       environment: Preview
       context: >-
         _internals/site-contexts/_common.json
@@ -103,7 +106,7 @@ jobs:
           needs.setup.outputs.version ||
           needs.build.outputs.version
         }}
-      awsRegion: us-east-2
+      awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}
       environment: Production
       context: >-
         _internals/site-contexts/_common.json
