disabled most pull request events

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,10 @@ name: Release
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
 
   push:
-    branches: [ master ]
+    branches: [master]
     
   workflow_dispatch:
     inputs:
