--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
         needs.setup.outputs.version ||
         needs.build.outputs.version
       )
-    uses: ./.github/workflows/cdk-deploy.yml@master
+    uses: kevjallen/static-site/.github/workflows/cdk-deploy.yml@master
     with:
       version: >-
         ${{
@@ -99,7 +99,7 @@ jobs:
         needs.setup.outputs.version ||
         needs.build.outputs.version
       )
-    uses: ./.github/workflows/cdk-deploy.yml@master
+    uses: kevjallen/static-site/.github/workflows/cdk-deploy.yml@master
     with:
       version: >-
         ${{
