--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
 name: Release
 
 on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+
   push:
-    branches: [ master ]
+    branches: [master]
     
   workflow_dispatch:
     inputs:
@@ -13,7 +16,8 @@ on:
 jobs:
   setup:
     if: >-
-      !github.event.inputs.version
+      !github.event.inputs.version &&
+      !github.event.pull_request
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version_lookup.outputs.version }}
@@ -69,7 +73,7 @@ jobs:
         needs.setup.outputs.version ||
         needs.build.outputs.version
       )
-    uses: ./.github/workflows/cdk-deploy.yml
+    uses: kevjallen/static-site/.github/workflows/cdk-deploy.yml@master
     with:
       version: >-
         ${{
@@ -77,7 +81,6 @@ jobs:
           needs.setup.outputs.version ||
           needs.build.outputs.version
         }}
-      awsRegion: us-east-2
       environment: Preview
       context: >-
         _internals/site-contexts/_common.json
@@ -86,6 +89,7 @@ jobs:
       awsAccountId: ${{ secrets.AWS_ACCOUNT_ID }}
       awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
       awsSecretAccessKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}
 
   production:
     needs: [setup, build, preview]
@@ -95,7 +99,7 @@ jobs:
         needs.setup.outputs.version ||
         needs.build.outputs.version
       )
-    uses: ./.github/workflows/cdk-deploy.yml
+    uses: kevjallen/static-site/.github/workflows/cdk-deploy.yml@master
     with:
       version: >-
         ${{
@@ -103,7 +107,6 @@ jobs:
           needs.setup.outputs.version ||
           needs.build.outputs.version
         }}
-      awsRegion: us-east-2
       environment: Production
       context: >-
         _internals/site-contexts/_common.json
@@ -112,3 +115,4 @@ jobs:
       awsAccountId: ${{ secrets.AWS_ACCOUNT_ID }}
       awsAccessKeyId: ${{ secrets.AWS_ACCESS_KEY_ID }}
       awsSecretAccessKey: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      awsRegion: ${{ secrets.AWS_DEFAULT_REGION }}
